# netflow_parser

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  FUNDING.yml  LICENSE-APACHE  LICENSE-MIT  README.md  RELEASES.md  SECURITY.md  deny.toml  lib.rs
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: rust.yml  security-audit.yml
benches/: hot_path_bench.rs  netflow_common_bench.rs  netflow_ipfix_bench.rs  netflow_parser_bench.rs  netflow_v5_bench.rs  netflow_v7_bench.rs  netflow_v9_bench.rs  packet_size_bench.rs  steady_state_bench.rs  v5_direct_bench.rs
examples/: custom_enterprise_fields.rs  horizontal_scale_out_template_store.rs  manual_ipfix_creation.rs  multi_source_comparison.rs  netflow_pcap.rs  netflow_udp_listener_multi_threaded.rs  netflow_udp_listener_single_threaded.rs  netflow_udp_listener_tokio.rs  perf_hot_path.rs  template_hooks.rs  template_management_demo.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_round_trip.rs  fuzz_target_1.rs
scripts/: README.md  check-all.sh  check-readme-sync.sh  install-hooks.sh  pre-commit
src/: lib.rs  netflow_common.rs  netflow_header.rs  parser.rs  proto.rs  protocol.rs  scoped_parser.rs  template_events.rs  template_store.rs  tests.rs  time.rs
src/field_types/: firewall_event.rs  flow_end_reason.rs  forwarding_status.rs  fragment_flags.rs  ipv4_options.rs  ipv6_extension_headers.rs  is_multicast.rs  mod.rs  mpls_label_exp.rs  mpls_top_label_type.rs  nat_event.rs  nat_originating_address_realm.rs  tcp_control_bits.rs  tcp_options.rs
src/legacy/: mod.rs
src/scoped_parser/: source_removal.rs
src/snapshots/: netflow_parser__protocol__protocol_lookup_tests__it_tests_protocol_types.snap  netflow_parser__tests__base_tests__can_read_ipfix.snap  netflow_parser__tests__base_tests__can_read_ipfix_template.snap  netflow_parser__tests__base_tests__can_read_v9.snap  netflow_parser__tests__base_tests__can_read_v9_with_hex_data.snap  netflow_parser__tests__base_tests__can_read_v9_with_minimal_headers.snap  netflow_parser__tests__base_tests__can_read_v9_with_options_template.snap  netflow_parser__tests__base_tests__can_read_v9_with_options_template_and_template.snap  netflow_parser__tests__base_tests__it_creates_error.snap  netflow_parser__tests__base_tests__it_doesnt_allow_v9.snap  netflow_parser__tests__base_tests__it_doesnt_parse_0_length_fields_ipfix.snap  netflow_parser__tests__base_tests__it_parses_0_length_fields_ipfix.snap  netflow_parser__tests__base_tests__it_parses_ipfix.snap  netflow_parser__tests__base_tests__it_parses_ipfix_and_re_exports.snap  netflow_parser__tests__base_tests__it_parses_ipfix_data_cached_template.snap  netflow_parser__tests__base_tests__it_parses_ipfix_enterprise_bit_in_non_options_template.snap  netflow_parser__tests__base_tests__it_parses_ipfix_enterprise_bit_template_and_data.snap  netflow_parser__tests__base_tests__it_parses_ipfix_mixed_enteprise_and_non_enterprise_fields.snap  netflow_parser__tests__base_tests__it_parses_ipfix_multiple_flow_records.snap  netflow_parser__tests__base_tests__it_parses_ipfix_multiple_templates.snap  netflow_parser__tests__base_tests__it_parses_ipfix_options_template.snap  netflow_parser__tests__base_tests__it_parses_ipfix_options_template_with_data.snap  netflow_parser__tests__base_tests__it_parses_ipfix_scappy_example.snap  netflow_parser__tests__base_tests__it_parses_ipfix_scappy_example_options_template.snap  netflow_parser__tests__base_tests__it_parses_ipfix_template_of_first_flowset_unknown.snap  netflow_parser__tests__base_tests__it_parses_ipfix_with_no_template_fields.snap  netflow_parser__tests__base_tests__it_parses_ipfix_with_no_template_fields_raises_error.snap  netflow_parser__tests__base_tests__it_parses_ipfix_with_v9_options_template_packet.snap  netflow_parser__tests__base_tests__it_parses_multiple_packets.snap  netflow_parser__tests__base_tests__it_parses_v5.snap  netflow_parser__tests__base_tests__it_parses_v5_and_re_exports.snap  netflow_parser__tests__base_tests__it_parses_v5_incomplete.snap  netflow_parser__tests__base_tests__it_parses_v7.snap  netflow_parser__tests__base_tests__it_parses_v9.snap  netflow_parser__tests__base_tests__it_parses_v9_and_re_exports.snap  netflow_parser__tests__base_tests__it_parses_v9_data_cached_template.snap  netflow_parser__tests__base_tests__it_parses_v9_ipv6flowlabel.snap  netflow_parser__tests__base_tests__it_parses_v9_many_flows.snap  netflow_parser__tests__base_tests__it_parses_v9_no_data.snap  netflow_parser__tests__base_tests__it_parses_v9_options_data_multiple_flows.snap  (+66 more)
src/static_versions/: v5.rs  v7.rs
src/v5/: mod.rs
src/v7/: mod.rs
tests/: cache_collision.rs  concurrent_parsing.rs  decoded_output_allocation.rs  decoded_output_default_regression.rs  decoded_output_limits.rs  dos_edge_cases.rs  hot_path_allocations.rs  ipfix_template_id_ownership.rs  lazy_template_cache_allocation.rs  memory_bounds.rs  multi_version_parsing.rs  parser_configuration.rs  pcap_integration.rs  pending_flows.rs  repeated_v9_fields.rs  round_trip.rs  scoped_parser.rs  scoped_source_removal_reporting.rs  serialization.rs  template_cache.rs  template_hooks.rs  template_store.rs  v9_count_framing.rs  v9_template_id_ownership.rs
(+59 files in other folders)
