[package]
name = "netflow_parser"
description = "Parser for Netflow Cisco V5, V7, V9, IPFIX"
version = "0.7.3"
edition = "2024"
authors = ["michael.mileusnich@gmail.com"]
license = "MIT OR Apache-2.0"
categories = ["encoding", "network-programming", "parser-implementations",]
readme = "README.md"
repository = "https://github.com/mikemiles-dev/netflow_parser/"

[dependencies]
byteorder = "1.5.0"
nom = "7.1.3"
nom-derive = "0.10.1"
mac_address = "1.1.5"
serde = { version = "1.0.166", features = ["derive"] }
lru = "0.16"

[features]
default = ["parse_unknown_fields"]
parse_unknown_fields = []
netflow_common = []

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
insta = { version = "1.30.0", features = ["yaml"] }
tokio = { version = "1.38.0", features = ["full"] }
tokio-macros = { version = "2.6.0" }
hex = "0.4.3"
serde_json = "1.0.100"
pcap-parser = "0.17"
etherparse = "0.19" 

[[bench]]
name = "netflow_parser_bench"
harness = false
[[bench]]
name = "netflow_common_bench"
harness = false
required-features = ["netflow_common"]

[[bench]]
name = "netflow_v5_bench"
harness = false

[[bench]]
name = "netflow_v7_bench"
harness = false

[[bench]]
name = "netflow_v9_bench"
harness = false

[[bench]]
name = "netflow_ipfix_bench"
harness = false
