[package]
name = "netflow_parser"
description = "Parser for Netflow Cisco V5, V7, V9, IPFIX"
version = "1.0.2"
edition = "2024"
rust-version = "1.88"
authors = ["Michael Mileusnich <michael.mileusnich@gmail.com>"]
exclude = [".DS_Store", ".github/", ".claude/", ".amazonq/", "openspec/", "rust_out", "src/.DS_Store", "src/variable_versions/.DS_Store"]
license = "MIT OR Apache-2.0"
categories = ["encoding", "network-programming", "parser-implementations",]
keywords = ["netflow", "ipfix", "parser", "network", "cisco"]
readme = "README.md"
repository = "https://github.com/mikemiles-dev/netflow_parser/"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
nom = "7.1.3"
nom-derive = "0.10.1"
serde = { version = "1.0.166", features = ["derive"] }
lru = "0.17"

[features]
default = ["parse_unknown_fields"]
parse_unknown_fields = []
netflow_common = []

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
insta = { version = "1.30.0", features = ["yaml"] }
tokio = { version = "1.38.0", features = ["full"] }
hex = "0.4.3"
serde_json = "1.0.100"
pcap-parser = "0.17"
etherparse = "0.19" 

[[bench]]
name = "netflow_parser_bench"
harness = false
[[bench]]
name = "netflow_common_bench"
harness = false
required-features = ["netflow_common"]

[[bench]]
name = "netflow_v5_bench"
harness = false

[[bench]]
name = "netflow_v7_bench"
harness = false

[[bench]]
name = "netflow_v9_bench"
harness = false

[[bench]]
name = "netflow_ipfix_bench"
harness = false

[[bench]]
name = "packet_size_bench"
harness = false

[[bench]]
name = "steady_state_bench"
harness = false

[[bench]]
name = "hot_path_bench"
harness = false
